--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Upload Python Package
 
 on:
-  release:
-    types: [created]
+#   release:
+#     types: [created]
+  push:
+    branches: [master]
 
 jobs:
   deploy:
