--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: Upload Python Package
 
 on:
-#   release:
-#     types: [created]
-  push:
-    branches: [master]
+  release:
+    types: [created]
 
 jobs:
   deploy:
