restructure to TezRomacH/python-package-template - No major changes except running cookiecutter and adding necessary files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,50 @@
-[bumpversion]
-current_version = 0.4.4
-commit = True
-tag = True
+# All configuration for plugins and other utils is defined here.
+# Read more about `setup.cfg`:
+# https://docs.python.org/3/distutils/configfile.html
 
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+[darglint]
+# darglint configuration:
+# https://github.com/terrencepreilly/darglint
+strictness = long
+docstring_style = google
 
-[bumpversion:file:datawrapper/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+[mypy]
+# mypy configurations: http://bit.ly/2zEl9WI
+python_version = 3.7
+pretty = True
+allow_redefinition = False
+check_untyped_defs = True
+disallow_any_generics = True
+disallow_incomplete_defs = True
+ignore_missing_imports = True
+implicit_reexport = False
+strict_optional = True
+strict_equality = True
+no_implicit_optional = True
+warn_no_return = True
+warn_unused_ignores = True
+warn_redundant_casts = True
+warn_unused_configs = True
+warn_return_any = True
+warn_unreachable = True
+show_error_codes = True
+show_column_numbers = True
+show_error_context = True
 
-[bdist_wheel]
-universal = 1
+# plugins = pydantic.mypy, sqlmypy
 
-[flake8]
-exclude = docs
+# [pydantic-mypy]
+# init_typed = True
+# warn_untyped_fields = True
 
-[aliases]
+[tool:pytest]
+# Directories that are not visited by pytest collector:
+norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
+doctest_optionflags = NUMBER NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
+
+# Extra options:
+addopts =
+  --strict-markers
+  --tb=short
+  --doctest-modules
+  --doctest-continue-on-failure
