--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,12 +32,13 @@ classifiers = [  # Update me
 "datawrapper" = "datawrapper.__main__:app"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7.1"
 importlib_metadata = {version = "^1.6.0", python = "<3.8"}
 typer = {extras = ["all"], version = "^0.3.2"}
 rich = "^9.8.2"
 requests = "^2.25.1"
 ipython = "^7.22.0"
+pandas = "^1.2.3"
 
 [tool.poetry.dev-dependencies]
 darglint = "^1.5.8"
