--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ importlib_metadata = {version = ">=1.6,<4.0", python = "<3.8"}
 rich = ">=9.8.2,<11.0.0"
 requests = "^2.25.1"
 ipython = "^7.22.0"
-pandas = "^1.2.3"
+pandas = ">=1.3.0,<1.4.0"
 
 [tool.poetry.dev-dependencies]
 darglint = "^1.8.0"
