--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ classifiers = [  # Update me
 "datawrapper" = "datawrapper.__main__:app"
 
 [tool.poetry.dependencies]
-python = "^3.7.1"
+python = ">=3.8.0,<3.9"
 importlib_metadata = {version = ">=1.6,<4.0", python = "<3.8"}
 rich = ">=9.8.2,<11.0.0"
 requests = "^2.25.1"
