--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install poetry
-      run: make download-poetry
+      run: make poetry-download
 
     - name: Set up cache
       uses: actions/cache@v3.2.3
@@ -36,7 +36,7 @@ jobs:
 
     - name: Run style checks
       run: |
-        make check-style
+        make check-codestyle
 
     - name: Run tests
       run: |
