--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Install poetry
       run: |
-        make download-poetry
+        make poetry-download
 
     - name: Set up cache
       uses: actions/cache@v3.2.3
@@ -39,7 +39,7 @@ jobs:
 
     - name: Run style checks
       run: |
-        make check-style
+        make check-codestyle
 
     - name: Run tests
       run: |
