--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,17 +33,17 @@ classifiers = [  # Update me
 [tool.poetry.dependencies]
 python = ">=3.8.0,<3.11"
 importlib_metadata = {version = ">=1.6,<4.0", python = "<3.8"}
-rich = ">=9.8.2,<11.0.0"
-requests = "^2.25.1"
-ipython = "^7.22.0"
-pandas = ">=1.3.0,<1.4.0"
+rich = ">=13.3.3,<14.0.0"
+requests = "^2.28.2"
+ipython = ">7.22.0,<8.0.0"
+pandas = ">=1.5,<2.0.0"
 
 [tool.poetry.dev-dependencies]
 darglint = "^1.8.0"
 isort = "^5.7.0"
 pyupgrade = "^2.7.4"
-black = "^20.8b1"
-mypy = "^0.812"
+black = "^23.3.0"
+mypy = "^1.1.1"
 bandit = "^1.7.0"
 safety = "^1.10.3"
 pytest = "^6.2.3"
