--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ python = ">=3.8.0,<3.11"
 importlib_metadata = {version = ">=1.6,<4.0", python = "<3.8"}
 rich = ">=13.3.3,<14.0.0"
 requests = "^2.28.2"
-ipython = ">7.22.0,<8.0.0"
+ipython = ">=8.12.0,<9.0.0"
 pandas = ">=1.5,<2.0.0"
 
 [tool.poetry.dev-dependencies]
