--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ rich = ">=13.3.3,<14.0.0"
 requests = "^2.28.2"
 ipython = ">=8.12.0,<9.0.0"
 pandas = ">=1.5,<2.0.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
 darglint = "^1.8.0"
