--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
-myst-nb==0.12.0
-sphinx-tabs==2.1.0
-sphinxcontrib-bibtex==1.0.0
-sphinx-book-theme==0.0.42
-importlib_metadata==1.6.1
+myst-nb==0.17.1
+sphinx-tabs==3.4.1
+sphinxcontrib-bibtex==2.5.0
+sphinx-book-theme==1.0.1
+importlib-metadata==6.1.0
 datawrapper
