--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,2 @@
-[darglint]
-# https://github.com/terrencepreilly/darglint
-strictness = long
-docstring_style = google
+[flake8]
+extend-ignore = D100,D104,E203,E501
