--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ setuptools-scm = "*"
 flake8-bugbear = "*"
 flake8-docstrings = "*"
 pytest-env = "*"
+types-requests = "*"
 
 [requires]
 python_version = "3.10"
